Reimplemented the top version of getting process stats.